--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -28,14 +28,14 @@
       dark:to-primary-color-dark-500;
   }
   .company {
-    box-shadow: inset 0 0 0 0 #de1d8d;
-    color: #de1d8d;
+    box-shadow: inset 0 0 0 0 #8A4FFF;
+    color: #8A4FFF ;
     margin: 0 -0.25rem;
     padding: 0 0.25rem;
     transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   }
   .company:hover {
-    box-shadow: inset 200px 0 0 0 #de1d8d;
+    box-shadow: inset 200px 0 0 0 #8A4FFF;
     color: white;
   }
 }
