--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -28,16 +28,20 @@
       dark:to-primary-color-dark-500;
   }
   .company {
-    box-shadow: inset 0 0 0 0 #8A4FFF;
-    color: #8A4FFF ;
+    box-shadow: inset 0 0 0 0 #de1d8d;
+    color: #de1d8d;
     margin: 0 -0.25rem;
     padding: 0 0.25rem;
     transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   }
   .company:hover {
-    box-shadow: inset 200px 0 0 0 #8A4FFF;
+    box-shadow: inset 200px 0 0 0 #de1d8d;
     color: white;
   }
+}
+
+.prose a {
+  @apply special-underline;
 }
 
 html {
@@ -49,3 +53,14 @@ input:-webkit-autofill,
 input:-webkit-autofill:focus {
   transition: background-color 600000s 0s, color 600000s 0s;
 }
+
+::-moz-selection {
+  background: #de1d8d;
+}
+::-webkit-selection {
+  background: #de1d8d;
+}
+::selection {
+  background: #de1d8d;
+}
+
